fixed background not showing

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html {
 
 body {
   height: 100%;
-  background: url(/images/background-main.png);   
+  background: url(https://raw.githubusercontent.com/motech99/pass-the-pigs/main/images/background-main.png);   
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: center;
